update akka solution

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -38,6 +38,10 @@ akka {
       large-message-destinations = [
         "/user/*/largeMessageProxy",
         "/user/**/largeMessageProxy",
+        "/user/*/dependencyMiner",
+        "/user/**/dependencyMiner",
+        "/user/*/dependencyWorker",
+        "/user/**/dependencyWorker"
       ]
       advanced {
         maximum-large-frame-size = 2 MiB
@@ -98,6 +102,16 @@ akka {
     }
     throughput = 1
   }
+
+  worker-pinned-dispatcher {
+      type = PinnedDispatcher
+      executor = "thread-pool-executor"
+      thread-pool-executor {
+        fixed-pool-size = 1
+        allow-core-timeout = off
+      }
+      throughput = 1
+    }
 
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   loglevel = "DEBUG" #"INFO"
