--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 			<artifactId>akka-actor-typed_${scala.version}</artifactId>
 			<version>${akka.version}</version>
 		</dependency>
+
 		<dependency>
 			<groupId>com.typesafe.akka</groupId>
 			<artifactId>akka-actor-testkit-typed_${scala.version}</artifactId>
@@ -102,10 +103,18 @@
 				<configuration>
 					<source>21</source>
 					<target>21</target>
+					<release>21</release>
 					<fork>true</fork>
 					<showWarnings>true</showWarnings>
 					<showDeprecation>true</showDeprecation>
 					<compilerArgument>-Xlint:all</compilerArgument>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
+					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
 			<plugin>
